--- a/Todo/Views/Shared/_LoginPartial.cshtml
+++ b/Todo/Views/Shared/_LoginPartial.cshtml
@@ -3,6 +3,7 @@
 
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
+@inject IGravatarService GravatarService
 
 @if (SignInManager.IsSignedIn(User))
 {
@@ -15,9 +16,10 @@
 
                         var iu = await UserManager.GetUserAsync(User);
                         var emailAddress = await UserManager.GetEmailAsync(iu);
-                        var gravatarhash = Gravatar.GetHash(emailAddress);
+                        var gravatarhash = GravatarHashService.GetHash(emailAddress);
+                        var gravatarUserProfile = await GravatarService.GetProfileAsync(emailAddress);
                     }
-
+                    @gravatarUserProfile.DisplayName
                     <img src="https://www.gravatar.com/avatar/@gravatarhash?s=30" />
                     @UserManager.GetUserName(User)
                 </a>
