--- a/Todo/Views/TodoList/Detail.cshtml
+++ b/Todo/Views/TodoList/Detail.cshtml
@@ -72,7 +72,7 @@
                     <small>
                         @item.ResponsibleParty.UserName
 
-                        <img src="https://www.gravatar.com/avatar/@Gravatar.GetHash(item.ResponsibleParty.Email)?s=30"/>
+                        <img src="https://www.gravatar.com/avatar/@GravatarHashService.GetHash(item.ResponsibleParty.Email)?s=30"/>
 
                     </small>
                 </div>
