--- a/Todo/Views/TodoItem/Edit.cshtml
+++ b/Todo/Views/TodoItem/Edit.cshtml
@@ -59,7 +59,7 @@
             
             <div class="form-group">
                 <label asp-for="Rank"></label>
-                <input asp-for="Rank" class="form-control" type="number" />
+                <input asp-for="Rank" class="form-control" type="number" min="0" />
                 <span asp-validation-for="Rank" class="text-danger"></span>
             </div>
 
