--- a/Todo/Views/TodoItem/Create.cshtml
+++ b/Todo/Views/TodoItem/Create.cshtml
@@ -47,6 +47,12 @@
                     )
                 <span asp-validation-for="ResponsiblePartyId" class="text-danger"></span>
             </div>
+            
+            <div class="form-group">
+                <label asp-for="Rank"></label>
+                <input asp-for="Rank" class="form-control" type="number" min="0" />
+                <span asp-validation-for="Rank" class="text-danger"></span>
+            </div>
 
             <div class="form-group">
                 <button type="submit" class="btn btn-default">Save</button>
