--- a/Todo/Views/TodoList/Detail.cshtml
+++ b/Todo/Views/TodoList/Detail.cshtml
@@ -1,7 +1,12 @@
 ﻿@using Todo.Controllers
 @using Todo.Data.Entities
 @using Todo.Services
+@using Todo.Views.TodoItem
+@using Microsoft.AspNetCore.Mvc.TagHelpers
+@using Todo.Data
 @model Todo.Models.TodoLists.TodoListDetailViewmodel
+
+@inject ApplicationDbContext dbContext
 
 @{
     ViewData["Title"] = $"List: {Model.Title}"; 
@@ -26,14 +31,14 @@
     <ul class="list-group">
 
         <li class="list-group-item">
-            <a asp-action="Create" asp-controller="TodoItem" asp-route-todoListId="@Model.TodoListId">
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addNewItemModal">
                 <strong>Add New Item</strong>
-            </a>
+            </button>
         </li>
 
         @foreach (var item in Model.Items
             .Where(i => !i.IsDone)
-            .OrderBy(i => sortOrder == "rank" ? i.Rank : (int?)null)
+            .OrderByDescending(i => sortOrder == "rank" ? i.Rank : (int?)null)
             .ThenBy(i => sortOrder == "importance" ? i.Importance : (Importance?)null))
         {
             string contextualClass;
@@ -54,31 +59,86 @@
                 
                 <div class="row">
 
-                <div class="col-md-8">
-                    <a asp-action="Edit" asp-controller="TodoItem" asp-route-todoItemId="@item.TodoItemId">
+                    <div class="col-md-8">
+                        <a asp-action="Edit" asp-controller="TodoItem" asp-route-todoItemId="@item.TodoItemId">
 
-                        @if (item.IsDone)
-                        {
-                            <s>@item.Title</s>
-                        }
-                        else
-                        {
-                            <text>@item.Title</text>
-                        }
-                    </a>
-                </div>
+                            @if (item.IsDone)
+                            {
+                                <s>@item.Title</s>
+                            }
+                            else
+                            {
+                                <text>@item.Title</text>
+                            }
+                        </a>
+                    </div>
 
-                <div class="col-md-4 text-right">
-                    <small>
-                        @item.ResponsibleParty.UserName
+                    <div class="col-md-4 text-right">
+                        <small>
+                            @item.ResponsibleParty.UserName
 
-                        <img src="https://www.gravatar.com/avatar/@GravatarHashService.GetHash(item.ResponsibleParty.Email)?s=30"/>
+                            <img src="https://www.gravatar.com/avatar/@GravatarHashService.GetHash(item.ResponsibleParty.Email)?s=30"/>
 
-                    </small>
-                </div>
+                        </small>
+                    </div>
                 </div>
 
             </li>
         }
     </ul>
+</div>
+
+<div class="modal fade" id="addNewItemModal" tabindex="-1" role="dialog" aria-labelledby="addNewItemModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="addNewItemModalLabel">Add New Item</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+
+            <form method="post" asp-action="Create" asp-controller="TodoItem" class="modal-body">
+                @Html.AntiForgeryToken()
+                @Html.Hidden("TodoListId", Model.TodoListId) 
+                <div class="form-group">
+                    <label for="Title">Title</label>
+                    <input type="text" name="Title" class="form-control" />
+                    <span validation-for="Title" class="text-danger"></span>
+                </div>
+
+                <div class="form-group">
+                    <label for="Importance">Importance</label>
+                    <select name="Importance" class="form-control">
+                        @foreach (var item in SelectListConvenience.ImportanceSelectListItems)
+                        {
+                            <option value="@item.Value">@item.Text</option>
+                        }
+                    </select>
+                    <span class="text-danger"></span>
+                </div>
+
+                <div class="form-group">
+                    <label for="ResponsiblePartyId">Responsible Party</label>
+                    <select name="ResponsiblePartyId" class="form-control">
+                        @foreach (var item in dbContext.UserSelectListItems())
+                        {
+                            <option value="@item.Value">@item.Text</option>
+                        }
+                    </select>
+                    <span class="text-danger"></span>
+                </div>
+                
+                <div class="form-group">
+                    <label for="Rank">Rank</label>
+                    <input name="Rank" class="form-control" type="number" min="0" />
+                    <span class="text-danger"></span>
+                </div>
+
+                <div class="form-group text-right">
+                    <button type="submit" class="btn btn-primary">Save</button>
+                </div>
+            </form>
+        </div>
+    </div>
 </div>
